--- a/admin/reviews.html
+++ b/admin/reviews.html
@@ -33,52 +33,52 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class=" mx-3 d-none d-sm-block">
+
+                <div class="sidebar-brand-text mx-3">
                     <img src="img/logo.png" alt="">
                 </div>
             </a>
-            
 
             <!-- Divider -->
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active " >
-                <a class="nav-link bg-dark m-1 " style="border-radius: 10px; width: 90%; " href="#">
+                <a class="nav-link "  href="index.html">
                     <i class=""><img src="img/sidbar icons/person.png" alt=""></i>
                     <span>User Profile</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="Hotels.html">
+                <a class="nav-link "  href="Hotels.html">
                     <i class=""><img src="img/sidbar icons/food_bank.png" alt=""></i>
                     <span>Hotels</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="room.html">
+                <a class="nav-link " href="room.html">
                     <i class=""><img src="img/sidbar icons/meeting_room.png" alt=""></i>
                     <span>Rooms</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="gustdetail.html">
+                <a class="nav-link  "   href="gustdetail.html">
                     <i class=""><img src="img/sidbar icons/location_home.png" alt=""></i>
                     <span>Guest Details</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="payments.html">
+                <a class="nav-link "  href="payments.html">
                     <i class=""><img src="img/sidbar icons/currency_rupee.png" alt=""></i>
                     <span>Payments</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="orders.html">
+                <a class="nav-link "  href="orders.html">
                     <i class=""><img src="img/sidbar icons/format_list_bulleted.png" alt=""></i>
                     <span>Orders</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="reviews.html">
+                <a class="nav-link bg-dark m-1" style="border-radius: 10px; width: 90%; " href="#">
                     <i class=""><img src="img/sidbar icons/stars.png" alt=""></i>
                     <span>Reviews</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="room.html">
+                <a class="nav-link" href="roomstatus.html">
                     <i class=""><img src="img/sidbar icons/concierge.png" alt=""></i>
                     <span>Room Status</span></a>
             </li>
@@ -112,12 +112,9 @@
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-3 static-top shadow">
 
                     <!-- Sidebar Toggle (Topbar) -->
-                    <button id="sidebarToggleTop" class="btn btn-light  d-md-none rounded-circle mr-2" style="background-color: #ff1717; color: #fff;">
+                    <button id="sidebarToggleTop" class="btn btn-light  d-md-none rounded-circle mr-3" style="background-color: #ff1717; color: #fff;">
                         <i class="fa fa-bars"></i>
                     </button>
-                    <div class=" bg-dark p-1 rounded d-md-none">
-                        <img src="img/logo.png" alt="">
-                    </div>
 
                     <!-- Topbar Search -->
                     <!-- <form
@@ -135,6 +132,7 @@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
+
                         <!-- <div class="topbar-divider d-none d-sm-block"></div> -->
 
                         <!-- Nav Item - User Information -->
@@ -173,7 +171,7 @@
                 <div class="container-fluid">
 
 
-                    <div class="border  shadow-sm rounded-3 p-3">
+                    <div class="border container shadow-sm rounded-3 ">
 
                         <div class=" rounded bg-white mb-2">
                             <form action="">
@@ -182,7 +180,7 @@
                                         <!-- <h1>Image Upload and Preview</h1> -->
                                         <input type="file" id="imageInput" accept="image/*" style="display: none;">
                                         <div class="preview-container">
-                                            <h4 class="mt-2" style="color: #ff1717;"><b>Click to choose an image</b></h4>
+                                            <h4 class="text-danger mt-2"><b>Click to choose an image</b></h4>
                                             <img id="imagePreview" style="border-radius: 50%; height: 150px; width: 150px;" src="" alt="">
                                         </div>
                                     </div>
@@ -244,7 +242,6 @@
 
                 </div>
                 <!-- /.container-fluid -->
-
 
             </div>
             <!-- End of Main Content -->
