--- a/login/index.html
+++ b/login/index.html
@@ -51,9 +51,9 @@
           <label for="floatingPassword" style="opacity: 30%;">Enter Your Password</label>
         </div>
 
-        <button class="btn text-light w-100 py-2" type="submit" style="background-color: #FF1717; height: 50px;">
+        <a href="../admin/index.html">        <button class="btn text-light w-100 py-2" type="button" style="background-color: #FF1717; height: 50px;">
           Submit
-        </button>
+        </button></a>
         <p class="mt-4 with-line-left with-line-right  ">Or use one of these options</p>
         <div class="d-flex justify-content-center mb-4" style="gap: 10px;">
           <div class="container text-center" style="gap: 10px;">
