--- a/admin/index.html
+++ b/admin/index.html
@@ -78,7 +78,7 @@
                     <span>Reviews</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="room.html">
+                <a class="nav-link" href="roomstatus.html">
                     <i class=""><img src="img/sidbar icons/concierge.png" alt=""></i>
                     <span>Room Status</span></a>
             </li>
