--- a/confirmationpage/confirmation.html
+++ b/confirmationpage/confirmation.html
@@ -38,7 +38,7 @@
         </header>
         <main>
            <!--  confirmation page start -->
-            <div class="container mt-5">
+            <div class="container mt-3">
                 <div class="row d-flex justify-content-center align-items-center">
                     <div class="col-lg-8 col-md-12 pb-3">
                         <div class="border container shadow-sm rounded-3">
@@ -91,13 +91,13 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center">
+            <div class="text-center my-2">
                 <a href="../index.html">
                     <button id="home" type="button" class="btn btn-danger btn-sm" style="height: 45px; width: 180px; font-size: 20px;">Back To Home</button>
                 </a>
             </div>
             
-                       <!--  confirmation page end -->
+               <!--  confirmation page end -->
         </main>
         <footer>
             <!-- place footer here -->
