--- a/admin/cards.html
+++ b/admin/cards.html
@@ -9,8 +9,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Cards</title>
-
+    <title>Y-Spot Admin</title>
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
