two brud crum are changed location in forgotpassword page and index page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </ul>
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#"><button type="button"
+              <a class="nav-link" href="login/signup.html"><button type="button"
                   class="btn btn-light text-danger"><b>Register</b></button></a>
             </li>
             <li class="nav-item">
