--- a/login/forgotpassword.html
+++ b/login/forgotpassword.html
@@ -89,6 +89,7 @@ const app = initializeApp(firebaseConfig);
     sendPasswordResetEmail(auth, emailInp.value)
       .then(() => {
         alert("Your password reset link has been sent to your email.");
+        location.href = "index.html";
       })
       .catch((error) => {
         console.error("Error sending password reset email:", error);
