navbar all pages aligned a responsive and redesigned

--- a/details-page/details.html
+++ b/details-page/details.html
@@ -50,30 +50,25 @@
   <header>
     <!-- First navigation bar: Registration and Sign In buttons -->
     <nav class="navbar" style="background-color: #FF1717;">
-
-      <div class="container container-fluid d-flex flex-column">
-        <!-- First row: Unordered list aligned to the right -->
-        <div class="d-flex login-nav  w-100 px-1">
-          <ul class="navbar-nav d-flex flex-row">
-            <li class="nav-item  px-3  register-nav">
-              <a class="nav-link" href="#"><button type="button" class="btn btn-light text-danger"
-                  style="height: 30px; display: flex; align-items: center; justify-content: center;"><b>Register</b></button></a>
-            </li>
-            <li class="nav-item px-3 login-nav">
-              <a class="nav-link" href="../login/index.html">
-                <button type="button" class="btn btn-light text-danger"
-                  style="height: 30px; display: flex; align-items: center; justify-content: center;">
-                  <b>Sign in</b>
-                </button>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <!-- Second row: Logo centered -->
-        <div class="d-flex justify-content-center w-100 flex-grow-1 align-items-center">
-          <a class="navbar-brand" href="../index.html">
-            <img src="../assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
-          </a>
+      <div class="container">
+        <div class="row w-100">
+          <!-- First column -->
+          <div class=" col-md-4 col-lg-4"></div>
+          <!-- Second column -->
+          <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
+            </a>
+          </div>
+          <!-- Third column -->
+          <div class="col-7 col-md-4 col-lg-4 d-flex justify-content-end align-items-center mt-2 mt-md-0">
+            <a class="nav-link" href="../login/index.html">
+              <button type="button" class="btn btn-light text-danger"
+                style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                <b>Sign in</b>
+              </button>
+            </a>
+          </div>
         </div>
       </div>
     </nav>
