--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="assets/index-asset/script.js">
 
-</script>  
+</script>   
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -74,70 +74,91 @@
     };
 </script>
 <!-- firebase script end -->
+<style>
+  .navbar-nav {
+    flex-wrap: nowrap;
+  }
+
+  .navbar-nav.scrollable {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+  }
+
+  .navbar-nav.scrollable .nav-item {
+    display: inline-block;
+  }
+</style>
+<style>
+  div.scrollmenu {
+background-color: #333;
+overflow: auto;
+white-space: nowrap;
+}
+
+div.scrollmenu a {
+display: inline-block;
+color: white;
+text-align: center;
+padding: 14px;
+text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+background-color: #f50e0e;
+}
+</style>
 </head>
 <body>
-  <header style="background-color:  rgb(237, 26, 37);">
-    <nav class=" container navbar navbar-expand-lg navbar-light" style="background-color:  rgb(237, 26, 37);">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html" style="margin-left: 100px;">
-          <img src="assets/img/Frame 223.png" alt="" class="d-inline-block align-text-top">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-          </ul>
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="login/signup.html"><button type="button"
-                  class="btn btn-light text-danger"><b>Register</b></button></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="signOutButton" href="login/index.html">
-                  <button type="button" class="btn btn-light text-danger"><b>Sign In</b></button>
-              </a>
-          </li>
-          </ul>
+  <header>
+    <!-- First navigation bar: Registration and Sign In buttons -->
+    <nav class="navbar" style="background-color: #FF1717;">
+      <div class="container">
+        <div class="row w-100">
+          <!-- First column -->
+          <div class=" col-md-4 col-lg-4"></div>
+          <!-- Second column -->
+          <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
+            </a>
+          </div>
+          <!-- Third column -->
+          <div class="col-7 col-md-4 col-lg-4 d-flex justify-content-end align-items-center mt-2 mt-md-0">
+            <a class="nav-link" href="../login/index.html">
+              <button type="button" class="btn btn-light text-danger"
+                style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                <b>Sign in</b>
+              </button>
+            </a>
+          </div>
         </div>
       </div>
     </nav>
-    <!-- <div class="container ">
-      <button class="btn btn-danger text-center ms-5  " id="signOutButton">Sign Out</button>
-      <div id="message">
-        <p>You have signed in as <span id="userName"></span> with the email <span id="userEmail"></span></p>
-      </div>
-    </div> -->
-    <nav class="container navbar navbar-expand-lg navbar-light" style="background-color:  rgb(237, 26, 37);">
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 " style="gap: 20px;">
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill active"><i
-                  class="fa-solid fa-bed p-2 "></i>Stays </button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill"><i
-                  class="fa-solid fa-plane-departure p-2"></i> Flights</button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill"><i
-                  class="fa-solid fa-earth-europe p-2"></i> Flight+Hotel</button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill"><i
-                  class="fa-solid fa-car p-2"></i> Car Rental</button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill"><i
-                  class="fa-solid fa-taxi p-2"></i>Airpot taxis</button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <!-- Second navigation bar: centered content -->
+    <div class="scrollmenu text-center" style="background-color:#FF1717;">
+      <a href="#home"><button type="button" class="btn text-light border rounded-pill active">
+          <i class="fa-solid fa-bed p-2"></i>Stays
+        </button></a>
+      <a href="#news"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-bus p-2"></i> Bus
+        </button></a>
+      <a href="#contact"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-earth-europe p-2"></i> Flight+Hotel
+        </button></a>
+      <a href="#about"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-car p-2"></i> Car Rental
+        </button></a>
+      <a href="#about"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-blog p-2"></i> Blogs
+        </button></a>
+      <a href="#about"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-blog p-2"></i> View Cart
+        </button></a>
+      <a href="#about"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-blog p-2"></i> About Us
+        </button></a>
+    </div>
   </header>
   <main>
     <div class="p-5 mb-4 bg-body-tertiary" style="background-image: url(./assets/img/Rectangle\ 377.jpg); background-repeat: no-repeat; background-size: cover; background-color: rgb(237, 26, 37);">
