--- a/reservation page/reservation.html
+++ b/reservation page/reservation.html
@@ -21,57 +21,53 @@
     <header>
         <!-- First navigation bar: Registration and Sign In buttons -->
         <nav class="navbar" style="background-color: #FF1717;">
-            <div class="container container-fluid d-flex flex-column">
-                <!-- First row: Unordered list aligned to the right -->
-                <div class="d-flex login-nav  w-100 px-1">
-                    <ul class="navbar-nav d-flex flex-row">
-                        <li class="nav-item  px-3  register-nav">
-                            <a class="nav-link" href="#"><button type="button" class="btn btn-light text-danger"
-                                    style="height: 30px; display: flex; align-items: center; justify-content: center;"><b>Register</b></button></a>
-                        </li>
-                        <li class="nav-item px-3 login-nav">
-                            <a class="nav-link" href="../login/index.html">
-                                <button type="button" class="btn btn-light text-danger"
-                                    style="height: 30px; display: flex; align-items: center; justify-content: center;">
-                                    <b>Sign in</b>
-                                </button>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Second row: Logo centered -->
-                <div class="d-flex justify-content-center w-100 flex-grow-1 align-items-center">
-                    <a class="navbar-brand" href="../index.html">
-                        <img src="../assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
-                    </a>
-                </div>
+          <div class="container">
+            <div class="row w-100">
+              <!-- First column -->
+              <div class=" col-md-4 col-lg-4"></div>
+              <!-- Second column -->
+              <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+                <a class="navbar-brand" href="../index.html">
+                  <img src="../assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
+                </a>
+              </div>
+              <!-- Third column -->
+              <div class="col-7 col-md-4 col-lg-4 d-flex justify-content-end align-items-center mt-2 mt-md-0">
+                <a class="nav-link" href="../login/index.html">
+                  <button type="button" class="btn btn-light text-danger"
+                    style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                    <b>Sign in</b>
+                  </button>
+                </a>
+              </div>
             </div>
+          </div>
         </nav>
         <!-- Second navigation bar: centered content -->
-        <div class="scrollmenu text-center" style="background-color: #FF1717;">
-            <a href="#home"><button type="button" class="btn text-light border rounded-pill active">
-                    <i class="fa-solid fa-bed p-2"></i>Stays
-                </button></a>
-            <a href="#news"><button type="button" class="btn text-light rounded-pill">
-                    <i class="fa-solid fa-bus p-2"></i> Bus
-                </button></a>
-            <a href="#contact"><button type="button" class="btn text-light rounded-pill">
-                    <i class="fa-solid fa-earth-europe p-2"></i> Flight+Hotel
-                </button></a>
-            <a href="#about"><button type="button" class="btn text-light rounded-pill">
-                    <i class="fa-solid fa-car p-2"></i> Car Rental
-                </button></a>
-            <a href="#about"><button type="button" class="btn text-light rounded-pill">
-                    <i class="fa-solid fa-blog p-2"></i> Blogs
-                </button></a>
-            <a href="#about"><button type="button" class="btn text-light rounded-pill">
-                    <i class="fa-solid fa-blog p-2"></i> View Cart
-                </button></a>
-            <a href="#about"><button type="button" class="btn text-light rounded-pill">
-                    <i class="fa-solid fa-blog p-2"></i> About Us
-                </button></a>
+        <div class="scrollmenu text-center" style="background-color:#FF1717;">
+          <a href="#home"><button type="button" class="btn text-light border rounded-pill active">
+              <i class="fa-solid fa-bed p-2"></i>Stays
+            </button></a>
+          <a href="#news"><button type="button" class="btn text-light rounded-pill">
+              <i class="fa-solid fa-bus p-2"></i> Bus
+            </button></a>
+          <a href="#contact"><button type="button" class="btn text-light rounded-pill">
+              <i class="fa-solid fa-earth-europe p-2"></i> Flight+Hotel
+            </button></a>
+          <a href="#about"><button type="button" class="btn text-light rounded-pill">
+              <i class="fa-solid fa-car p-2"></i> Car Rental
+            </button></a>
+          <a href="#about"><button type="button" class="btn text-light rounded-pill">
+              <i class="fa-solid fa-blog p-2"></i> Blogs
+            </button></a>
+          <a href="#about"><button type="button" class="btn text-light rounded-pill">
+              <i class="fa-solid fa-blog p-2"></i> View Cart
+            </button></a>
+          <a href="#about"><button type="button" class="btn text-light rounded-pill">
+              <i class="fa-solid fa-blog p-2"></i> About Us
+            </button></a>
         </div>
-    </header>
+      </header>
     <main>
         <div class="container">
             <!-- first hotel details section start  -->
